--- a/app/index.html
+++ b/app/index.html
@@ -22,12 +22,85 @@
 <body>
    <div class="wrapper" id="wrapper">
       @@include('inc-header.html')
-
       <div class="middle" id="middle">
-         <div class="col-3">
-            <div class="ui-btn">Example</div>
-         </div>
+         <div class="container">
+            <div class="participate">
+               <div class="participate-title">
+                  <div class="participate-title-h1">
+                     How to participate in this challenge?
+                  </div>
+                  <div class="participate-title-articul">Are you a techie looking for an interesting riddle to solve?
+                     Well,
+                     we have the <br> perfect challenge for you. Solve our riddle and stand a chance to win
+                     an airpods<sup>1</sup>.
+                  </div>
+               </div>
+               <div class="steps">
+                  <div class="row">
+                     <div class="col-4">
+                        <div class="steps-item">
+                           <div class="steps-item-img">
+                              <img src="./images/icon/step1.png" alt="alt">
+                           </div>
+                           <div class="steps-item-text">
+                              <div class="steps-item-text-title">Step 1</div>
+                              <div class="steps-item-text-articule">Solve the tech puzzle</div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-4">
+                        <div class="steps-item">
+                           <div class="steps-item-img">
+                              <img src="./images/icon/step2.png" alt="alt">
+                           </div>
+                           <div class="steps-item-text">
+                              <div class="steps-item-text-title">Step 2</div>
+                              <div class="steps-item-text-articule">Once you solve the tech puzzle, please read the T&Cs
+                                 of the contest and accept them</div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-4">
+                        <div class="steps-item">
+                           <div class="steps-item-img">
+                              <img src="./images/icon/step3.png" alt="alt">
+                           </div>
+                           <div class="steps-item-text">
+                              <div class="steps-item-text-title">Step 3</div>
+                              <div class="steps-item-text-articule">Fill in your personal details so that we can reach
+                                 out to you (10 lucky winners will be awarded an airpods)</div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="steps-btn ui-btn">Solve the tech puzzle</div>
+               </div>
+            </div>
+            <div class="aboutUs">
+               <div class="row">
+                  <div class="col-7"></div>
+                  <div class="col-5">
+                     <div class="aboutUs-group">
+                        <div class="aboutUs-group-text">
+                           <div class="aboutUs-group-text-title">About Us</div>
+                           <div class="aboutUs-group-text-articule">
+                              <div>
+                                 Indeed is the #1 job site in the world2 with over 28 million
+                                 unique visitors3 in India (Indeed + Glassdoor combined) every month.
+                              </div>
+                              Indeed strives to put job seekers first, giving them free access to search for jobs, post
+                              resumes, and research companies. Every day, we connect millions of people to new
+                              opportunities.
+                           </div>
+                        </div>
+                        <div class="aboutUs-group-btn ui-btn">Upload your resume on Indeed </div>
+                     </div>
 
+                  </div>
+               </div>
+
+            </div>
+         </div>
       </div>
       @@include('inc-footer.html')
    </div>
