--- a/app/index.html
+++ b/app/index.html
@@ -24,13 +24,6 @@
       @@include('inc-header.html')
       <div class="middle" id="middle">
          <div class="container">
-            <a class="mfp-link" href="javascript:void(0)" data-href="./popups/warning.html">warning</a>
-            <a class="mfp-link" href="javascript:void(0)" data-href="./popups/confirmation.html">confirmation</a>
-            <a class="mfp-link" href="javascript:void(0)" data-href="./popups/attention.html">attention</a>
-            <a class="mfp-link" href="javascript:void(0)" data-href="./popups/success.html">success</a>
-            <a class="mfp-link" href="javascript:void(0)" data-href="./popups/fail.html">fail</a>
-            <a class="mfp-link" href="javascript:void(0)" data-href="./popups/tcs.html">T&Cs</a>
-            <a class="mfp-link" href="javascript:void(0)" data-href="./popups/form.html">form</a>
             <div class="participate">
                <div class="participate-title">
                   <div class="participate-title-h1">
@@ -38,7 +31,7 @@
                   </div>
                   <div class="participate-title-articul">Are you a techie looking for an interesting riddle to solve?
                      Well,
-                     we have the <br> perfect challenge for you. Solve our riddle and stand a chance to win
+                     we have the perfect challenge for you. Solve our riddle and stand a chance to win
                      an airpods<sup>1</sup>.
                   </div>
                </div>
@@ -91,14 +84,17 @@
                         <div class="aboutUs-group-text">
                            <div class="aboutUs-group-text-title">About Us</div>
                            <div class="aboutUs-group-text-articule">
-                              <div>
-                                 <p></p>
+                              <p>
                                  Indeed is the #1 job site in the world2 with over 28 million
                                  unique visitors3 in India (Indeed + Glassdoor combined) every month.
-                              </div>
-                              Indeed strives to put job seekers first, giving them free access to search for jobs, post
-                              resumes, and research companies. Every day, we connect millions of people to new
-                              opportunities.
+                              </p>
+                              <p>
+                                 Indeed strives to put job seekers first, giving them free access to search for jobs,
+                                 post
+                                 resumes, and research companies. Every day, we connect millions of people to new
+                                 opportunities.
+                              </p>
+
                            </div>
                         </div>
                         <form enctype="multipart/form-data">
