--- a/app/index.html
+++ b/app/index.html
@@ -78,8 +78,37 @@
             </div>
             <div class="aboutUs">
                <div class="row">
-                  <div class="col-7"></div>
-                  <div class="col-5 col-xs-12">
+                  <div class="col-7 col-md-12 aboutus-order">
+                     <div class="aboutUs-picture">
+                        <!-- <img src="./images/bg/bg-bottom-teen.svg" class="aboutUs-picture-bg" alt="alt"> -->
+                        <img src="./images/about-us-teen.png" alt="alt" class="aboutUs-picture-img">
+                        <!-- <div class="aboutUs-picture-item flex valign-center aboutUs-picture-top">
+                           <div class="aboutUs-picture-item-num">
+                              28m
+                           </div>
+                           <div class="aboutUs-picture-item-text">
+                              Unique monthly visitors on Glassdoor and Indeed<sup>3</sup>
+                           </div>
+                        </div>
+                        <div class="aboutUs-picture-item flex valign-center aboutUs-picture-left">
+                           <div class="aboutUs-picture-item-num">
+                              190k
+                           </div>
+                           <div class="aboutUs-picture-item-text">
+                              Jobs added every month
+                           </div>
+                        </div>
+                        <div class="aboutUs-picture-item flex valign-center aboutUs-picture-bottom">
+                           <div class="aboutUs-picture-bottom-num">
+                              410k
+                           </div>
+                           <div class="aboutUs-picture-bottom-text">
+                              Resumes added or updated every month
+                           </div>
+                        </div> -->
+                     </div>
+                  </div>
+                  <div class="col-5 col-md-12 col-xs-12">
                      <div class="aboutUs-group">
                         <div class="aboutUs-group-text">
                            <div class="aboutUs-group-text-title">About Us</div>
@@ -111,6 +140,10 @@
             </div>
          </div>
       </div>
+
+
+
+
       @@include('inc-footer.html')
    </div>
    @@include('inc-script.html')
