--- a/app/pages.html
+++ b/app/pages.html
@@ -91,6 +91,8 @@
                   </li>
                   <li><a class="mfp-link" href="javascript:void(0)" data-href="./popups/question.html">Question</a>
                   </li>
+                  <li><a class="mfp-link" href="javascript:void(0)" data-href="./popups/labyrinth.html">Labyrinth</a>
+                  </li>
                </ul>
             </div>
          </div>
