--- a/app/index.html
+++ b/app/index.html
@@ -80,11 +80,13 @@
                <div class="row">
                   <div class="col-7 col-md-12 aboutus-order">
                      <div class="aboutUs-picture">
-                        <!-- <img src="./images/bg/bg-bottom-teen.svg" class="aboutUs-picture-bg" alt="alt"> -->
                         <img src="./images/about-us-teen.png" alt="alt" class="aboutUs-picture-img">
-                        <!-- <div class="aboutUs-picture-item flex valign-center aboutUs-picture-top">
+
+                        <div class="aboutUs-picture-item flex valign-center aboutUs-picture-top">
                            <div class="aboutUs-picture-item-num">
                               28m
+                              <img src="./images/icon/Star-about-top.png" class="aboutUs-picture-item-star__top"
+                                 alt="alt">
                            </div>
                            <div class="aboutUs-picture-item-text">
                               Unique monthly visitors on Glassdoor and Indeed<sup>3</sup>
@@ -93,6 +95,8 @@
                         <div class="aboutUs-picture-item flex valign-center aboutUs-picture-left">
                            <div class="aboutUs-picture-item-num">
                               190k
+                              <img src="./images/icon/Star-about-left.png" class="aboutUs-picture-item-star__left"
+                                 alt="alt">
                            </div>
                            <div class="aboutUs-picture-item-text">
                               Jobs added every month
@@ -101,11 +105,13 @@
                         <div class="aboutUs-picture-item flex valign-center aboutUs-picture-bottom">
                            <div class="aboutUs-picture-bottom-num">
                               410k
+                              <img src="./images/icon/Star-about-bottom.png" class="aboutUs-picture-item-star__bottom"
+                                 alt="alt">
                            </div>
                            <div class="aboutUs-picture-bottom-text">
                               Resumes added or updated every month
                            </div>
-                        </div> -->
+                        </div>
                      </div>
                   </div>
                   <div class="col-5 col-md-12 col-xs-12">
