--- a/app/pages.html
+++ b/app/pages.html
@@ -21,7 +21,6 @@
 
 <body>
    <div class="wrapper" id="wrapper">
-
       <header class="header header-page" id="header">
          <div class="container">
             <div class="row space-between valign-center">
@@ -47,58 +46,56 @@
          </div>
       </header>
 
-
-      <div class="middle" id="middle">
-         <div class="container">
-            <div class="pages-link">
-               <div class="pages-link-title">Main page</div>
-               <ul>
-                  <li>
-                     <a href="index.html" class="pages-link-title-main">Main page</a>
-                  </li>
-               </ul>
+   </div>
+   <div class="middle" id="middle">
+      <div class="container">
+         <div class="pages-link">
+            <div class="pages-link-title">Main page</div>
+            <ul>
+               <li>
+                  <a href="index.html" class="pages-link-title-main">Main page</a>
+               </li>
+            </ul>
+         </div>
+         <div class="popups-links">
+            <div class="popups-links-title">
+               Popups pages
             </div>
-            <div class="popups-links">
-               <div class="popups-links-title">
-                  Popups pages
-               </div>
-               <ul>
-                  <li><a class="mfp-link" href="javascript:void(0)" data-href="./popups/warning.html">Warning</a>
-                  </li>
-                  <li> <a class="mfp-link" href="javascript:void(0)"
-                        data-href="./popups/confirmation.html">Confirmation</a>
-                  </li>
-                  <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/attention.html">Attention</a>
-                  </li>
-                  <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/success.html">Success</a>
-                  </li>
-                  <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/fail.html">Fail</a>
-                  </li>
-                  <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/tcs.html">T&Cs</a>
-                  </li>
-                  <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/form.html">Form</a>
-                  </li>
-                  <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/rules.html">Rules</a>
-                  </li>
-                  <li> <a class="mfp-link" href="javascript:void(0)"
-                        data-href="./popups/attention-lab.html">Attention-lab</a>
-                  </li>
-                  <li> <a class="mfp-link" href="javascript:void(0)"
-                        data-href="./popups/success-lab.html">Success-lab</a>
-                  </li>
-                  <li> <a class="mfp-link" href="javascript:void(0)"
-                        data-href="./popups/congratulations.html">Congratulations</a>
-                  </li>
-                  <li><a class="mfp-link" href="javascript:void(0)" data-href="./popups/question.html">Question</a>
-                  </li>
-                  <li><a class="mfp-link" href="javascript:void(0)" data-href="./popups/labyrinth.html">Labyrinth</a>
-                  </li>
-               </ul>
-            </div>
+            <ul>
+               <li><a class="mfp-link" href="javascript:void(0)" data-href="./popups/warning.html">Warning</a>
+               </li>
+               <li> <a class="mfp-link" href="javascript:void(0)"
+                     data-href="./popups/confirmation.html">Confirmation</a>
+               </li>
+               <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/attention.html">Attention</a>
+               </li>
+               <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/success.html">Success</a>
+               </li>
+               <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/fail.html">Fail</a>
+               </li>
+               <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/tcs.html">T&Cs</a>
+               </li>
+               <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/form.html">Form</a>
+               </li>
+               <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/rules.html">Rules</a>
+               </li>
+               <li> <a class="mfp-link" href="javascript:void(0)"
+                     data-href="./popups/attention-lab.html">Attention-lab</a>
+               </li>
+               <li> <a class="mfp-link" href="javascript:void(0)" data-href="./popups/success-lab.html">Success-lab</a>
+               </li>
+               <li> <a class="mfp-link" href="javascript:void(0)"
+                     data-href="./popups/congratulations.html">Congratulations</a>
+               </li>
+               <li><a class="mfp-link" href="javascript:void(0)" data-href="./popups/question.html">Question</a>
+               </li>
+               <li><a class="mfp-link" href="javascript:void(0)" data-href="./popups/labyrinth.html">Labyrinth</a>
+               </li>
+            </ul>
          </div>
       </div>
-      @@include('inc-footer.html')
    </div>
+   @@include('inc-footer.html')
    @@include('inc-script.html')
 </body>
 
