--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
       @@include('inc-header.html')
       <div class="middle" id="middle">
          <div class="container">
+
             <div class="participate">
                <div class="participate-title">
                   <div class="participate-title-h1">
@@ -146,11 +147,8 @@
             </div>
          </div>
       </div>
-
-
-
-
-      @@include('inc-footer.html')
+   </div>
+   @@include('inc-footer.html')
    </div>
    @@include('inc-script.html')
 </body>
