--- a/app/index.html
+++ b/app/index.html
@@ -26,11 +26,11 @@
          <div class="container">
 
             <div class="participate">
-               <div class="participate-title">
-                  <div class="participate-title-h1">
+               <div class="participate-header">
+                  <div class="participate-header-title">
                      How to participate in this challenge?
                   </div>
-                  <div class="participate-title-articul">Are you a techie looking for an interesting riddle to solve?
+                  <div class="participate-header-articul">Are you a techie looking for an interesting riddle to solve?
                      Well,
                      we have the perfect challenge for you. Solve our riddle and stand a chance to win
                      an airpods<sup>1</sup>.
@@ -41,7 +41,10 @@
                      <div class="col-4 col-sm-12">
                         <div class="steps-item">
                            <div class="steps-item-img">
-                              <img src="./images/icon/step1.png" alt="alt">
+                              <div class="steps-item-img-group">
+                                 <img src="./images/bg/bg-step1.png" class="steps-item-img-bg__cup" alt="alt">
+                                 <img src="./images/icon/Trophy.png" class="steps-item-img-group__cup" alt="alt">
+                              </div>
                            </div>
                            <div class="steps-item-text">
                               <div class="steps-item-text-title">Step 1</div>
@@ -52,7 +55,10 @@
                      <div class="col-4 col-sm-12">
                         <div class="steps-item">
                            <div class="steps-item-img">
-                              <img src="./images/icon/step2.png" alt="alt">
+                              <div class="steps-item-img-group">
+                                 <img src="./images/icon/step-2.png" class="steps-item-img-group__list" alt="alt">
+                                 <img src="./images/icon/star-step2.png" class="steps-item-img-group__star" alt="alt">
+                              </div>
                            </div>
                            <div class="steps-item-text">
                               <div class="steps-item-text-title">Step 2</div>
@@ -64,7 +70,11 @@
                      <div class="col-4 col-sm-12">
                         <div class="steps-item">
                            <div class="steps-item-img">
-                              <img src="./images/icon/step3.png" alt="alt">
+                              <div class="steps-item-img-group">
+                                 <img src="./images/icon/STEP_3z.png" class="steps-item-img-group__note" alt="alt">
+                                 <img src="./images/icon/PEN.png" class="steps-item-img-group__pen" alt="alt">
+                              </div>
+
                            </div>
                            <div class="steps-item-text">
                               <div class="steps-item-text-title">Step 3</div>
@@ -81,7 +91,8 @@
                <div class="row">
                   <div class="col-7 col-md-12 aboutus-order">
                      <div class="aboutUs-picture">
-                        <img src="./images/about-us-teen.png" alt="alt" class="aboutUs-picture-img">
+                        <img src="./images/about-us-teen.png" srcset="./images/about-us-teen@2x.png 2x" alt="alt"
+                           class="aboutUs-picture-img">
 
                         <div class="aboutUs-picture-item flex valign-center aboutUs-picture-top">
                            <div class="aboutUs-picture-item-num">
@@ -136,7 +147,7 @@
                         <form enctype="multipart/form-data">
                            <input id="upload" name="upload" class="aboutUs-group-input" type="file"
                               value="Upload your resume on Indeed">
-                           <label for="upload" class="aboutUs-group-btn ui-btn">Upload your resume on Indeed</label>
+                           <label for="upload" class="aboutUs-group-btn">Upload your resume on Indeed</label>
                         </form>
                         <!-- <div class="aboutUs-group-btn ui-btn">Upload your resume on Indeed </div> -->
                      </div>
