--- a/app/index.html
+++ b/app/index.html
@@ -144,12 +144,7 @@
 
                            </div>
                         </div>
-                        <form enctype="multipart/form-data">
-                           <input id="upload" name="upload" class="aboutUs-group-input" type="file"
-                              value="Upload your resume on Indeed">
-                           <label for="upload" class="aboutUs-group-btn">Upload your resume on Indeed</label>
-                        </form>
-                        <!-- <div class="aboutUs-group-btn ui-btn">Upload your resume on Indeed </div> -->
+                        <a href="#" class="aboutUs-group-btn">Upload your resume on Indeed </a>
                      </div>
 
                   </div>
